fixing overflowq

--- a/style.css
+++ b/style.css
@@ -358,9 +358,10 @@ margin-bottom: 150px;
   align-items: start;
   justify-content: space-around;
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
   .tarif-wrap{
     flex-direction: column;
+    align-items: center;
   }
 }
 .tarif-wrap .item{
@@ -382,6 +383,7 @@ margin-bottom: 150px;
 @media screen and (max-width: 1100px) {
   .tarif-wrap .item{
       margin-bottom: 30px;
+      width: 100%;
   }
 }
 .tarif-wrap .item .circle{
@@ -447,6 +449,11 @@ margin-bottom: 150px;
   align-items: center;
   justify-content: space-between;
 }
+@media screen and (max-width: 1000px) {
+  .contact-wrap{
+    flex-direction: column;
+  }
+}
 .contact-image-wrap{
   display: flex;
   align-items: center;
@@ -457,6 +464,11 @@ margin-bottom: 150px;
   overflow: hidden;
   /* height: 500px; */
   transition: border-radius 0.4s ease;
+}
+@media screen and (max-width: 1000px) {
+  .contact-image-wrap{
+    width: 300px;
+  }
 }
 .contact-image-wrap:hover{
   border-bottom-left-radius:100rem;
@@ -482,19 +494,25 @@ margin-bottom: 150px;
   font-size: 2.9rem;
   margin-bottom: 15px;
 }
+@media screen and (max-width: 1000px) {
+  .email{
+    font-size: 1.9rem;
+  }
+}
 .adresse{
   font-size: 2.9rem;
 }
 .section-faq{
+  opacity: 0;
   z-index: 100;
   position: fixed;
-  width: 100%;
+  width: 70%;
   top: 0;
   height: 100%;
   right:0;
   padding: 0px 30px;
   transform: translateX(100%);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 2s;
 }
 .overlay{
   width: 100%;
@@ -510,18 +528,29 @@ margin-bottom: 150px;
 }
 .overlay.open{
   opacity: 1;
+  pointer-events: all;
+  z-index: 101;
+
 }
+
 .section-faq.open{
+  opacity: 1;
   transform: translateX(0);
+  z-index: 120;
+  transition: transform 0.5s ease-in-out, opacity 0s;
+
 }
 .inner-section-faq{
   box-shadow: -1px 3px 90px 0px #000000;
-  width: 70%;
+  width: 100%;
+  z-index: 1000;
   background-color: #ddc3af;
   position: absolute;
   right: 0;top: 0px;
   padding: 110px 30px 0;
   height: 100%;
+  overflow: auto;
+  padding-bottom: 50px;
 }
   .close {
     position: absolute;
